corrected request quote button font size and overflow and corrected background image size in hero section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,7 +18,7 @@ body {
 
 // header
 header {
-  margin-bottom: 0.9rem;
+  margin-bottom: 1rem;
   position: relative;
 }
 
@@ -33,11 +33,15 @@ header {
 }
 
 .header-cta p:nth-of-type(1) {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .header-cta p:nth-of-type(2) {
-  font-size: 22px;
+  font-size: 18px;
+}
+
+header .request {
+  font-size: 14px;
 }
 
 // nav
